# netbox-plugin-workflow

./: README.md  pyproject.toml  setup.py  tasks.py
development/: Dockerfile  configuration.py  dev.env  docker-compose.yml
netbox_workflow/: __init__.py  navigation.py  urls.py
