[tool.poetry]
name = "netbox-plugin-workflow"
version = "0.1.0"
description = "Netbox Plugins - add workflow to Netbox"
authors = ["Ezra Liu"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/zerdliu/netbox-plugin-workflow"
repository = "https://github.com/zerdliu/netbox-plugin-workflow"
keywords = ["netbox", "network", "workflow", "django"]
packages = [
    { include = "netbox_workflow" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.7b0"
invoke = "^1.6.0"
pylint = "^2.9.6"
pylint-django = "^2.4.4"
pydocstyle = "^6.1.1"
yamllint = "^1.26.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
